manifests/apps/nginx/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploy
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: nginx
          image: nginx:1.31.4-perl
          ports:
            - containerPort: 80
