manifests/apps/nginx/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service
spec:
  ports:
    - name: http
      protocol: TCP
      port: 80
